--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Homepage</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/mustache@4.2.0/mustache.min.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -42,32 +43,36 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./main.js"></script>
 
+    <!-- Mustache Template for Articles -->
+    <script id="articleTemplate" type="x-tmpl-mustache">
+        <div class="col-md-4 col-12">
+            <div class="card mb-3">
+                {{#image}}<img src="{{image}}" class="card-img-top" alt="{{title}}">{{/image}}
+                <div class="card-body">
+                    <h5 class="card-title">{{title}}</h5>
+                    <a href="/article.html?id={{id}}" class="btn btn-primary">Read More</a>
+                    {{#isArticleCreator}}
+                        <button onclick="deleteArticle({{id}})" class="btn btn-danger">Delete Article</button>
+                    {{/isArticleCreator}}
+                </div>
+            </div>
+        </div>
+    </script>
+
     <script>
         fetch('/api/articles')
             .then(response => response.json())
             .then(articles => {
                 const articlesDiv = document.getElementById('articles');
                 const currentUserId = localStorage.getItem('userId');
-                const currentUsername = localStorage.getItem('username');
+                const template = document.getElementById('articleTemplate').innerHTML;
 
                 articles.forEach(article => {
-                    const isArticleCreator = article.user_id == currentUserId;
-
-                    const articleHtml = `
-                        <div class="col-md-4 col-12">
-                            <div class="card mb-3">
-                                ${article.image ? `<img src="${article.image}" class="card-img-top" alt="${article.title}">` : ''}
-                                <div class="card-body">
-                                    <h5 class="card-title">${article.title}</h5>
-                                    <a href="/article.html?id=${article.id}" class="btn btn-primary">Read More</a>
-                                    ${isArticleCreator ? `
-                                        <button onclick="deleteArticle(${article.id})" class="btn btn-danger">Delete Article</button>
-                                    ` : ''}
-                                </div>
-                            </div>
-                        </div>
-                    `;
-                    articlesDiv.innerHTML += articleHtml;
+                    const view = {
+                        ...article,
+                        isArticleCreator: article.user_id == currentUserId
+                    };
+                    articlesDiv.innerHTML += Mustache.render(template, view);
                 });
             });
 
