I change code in style.css
I changed the code in style.css to fix the size of images

--- a/public/article.html
+++ b/public/article.html
@@ -64,7 +64,7 @@
     <script id="articleTemplate" type="x-tmpl-mustache">
         <div class="card">
             <div class="card-body">
-                {{#image}}<img src="{{image}}" class="card-img-top" alt="{{title}}">{{/image}}
+                {{#image}}<img src="{{image}}" class="article-image" alt="{{title}}">{{/image}}
                 <h2 class="card-title">{{title}}</h2>
                 <p class="card-text" id="articleContent">{{content}}</p>
                 {{#isArticleCreator}}
