--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
     <script id="articleTemplate" type="x-tmpl-mustache">
         <div class="col-md-4 col-12">
             <div class="card mb-3">
-                {{#image}}<img src="{{image}}" class="card-img-top" alt="{{title}}">{{/image}}
+                {{#image}}<img src="{{image}}" class="article-image" alt="{{title}}">{{/image}}
                 <div class="card-body">
                     <h5 class="card-title">{{title}}</h5>
                     <a href="/article.html?id={{id}}" class="btn btn-primary">Read More</a>
