--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <title>Blog Homepage</title>
      <!-- Your Custom Styles (this is where styles.css goes) -->
      <link rel="stylesheet" href="styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/mustache@4.2.0/mustache.min.js"></script>
+    <link href="./bootstrap/bootstrap.min.css" rel="stylesheet">
+    <script src="./mustache/mustache.min.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -42,7 +42,7 @@
         <div id="articles" class="row mt-4"></div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./bootstrap/bootstrap.bundle.min.js"></script>
     <script src="./main.js"></script>
 
     <!-- Mustache Template for Articles -->
