--- a/public/login.html
+++ b/public/login.html
@@ -6,7 +6,7 @@
     <title>Login</title>
      <!-- Your Custom Styles (this is where styles.css goes) -->
      <link rel="stylesheet" href="styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./bootstrap/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -52,7 +52,7 @@
         <p class="mt-3">Don't have an account? <a href="/register.html">Register here</a></p>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./bootstrap/bootstrap.bundle.min.js"></script>
     <script src="./main.js"></script>
 
     <script>
