some changes in style
for better UI

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Homepage</title>
      <!-- Your Custom Styles (this is where styles.css goes) -->
-     <link rel="stylesheet" href="styles.css">
+     <link rel="stylesheet" href="./styles.css">
     <link href="./bootstrap/bootstrap.min.css" rel="stylesheet">
     <script src="./mustache/mustache.min.js"></script>
 </head>
